# IGNN

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  baselines.csv  baselines.py  constraints.txt  main.py  main_NST.py  main_ST.py  main_hops.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_baselines.py  search_grid.md
.ci/: install-dev.sh  install.sh
add_exp/: add_exps.md
benchmark/baselines/: ACMGCN.py  APPNP.py  DAGNN.py  DIFFormer.py  GAT.py  GPRGNN.py  GloGNN.py  HOGGCN.py  JKNet.py  SIGN.py
benchmark/configs/: ACMGCN.yaml  APPNP.yaml  DAGNN.yaml  GAT.yaml  GBKGNN.yaml  GCN.yaml  GCNII.yaml  GloGNN.yaml  GraphSAGE.yaml  H2GCN.yaml  IGCN.yaml  IncepGCN.yaml  JKNet.yaml  MLP.yaml  MixHop.yaml  NodeFormer.yaml  OrderedGNN.yaml  SGC.yaml  SGFormer.yaml
benchmark/modules/: __init__.py  data.py  decoder.py
benchmark/utils/: __init__.py  argparser.py  common.py  preprocess.py  sample.py
configs/: params.py  search_grid.md  search_grid.py
flatgnn/configs/: data.yaml
flatgnn/models/: FlatGNN.py  FlatGNN_NST.py  FlatGNN_ST.py  __init__.py
flatgnn/modules/: DeepSets.py  FlatGNN.py  LSTM.py  MLP.py  __init__.py  orderedGating.py
flatgnn/utils/: __init__.py  common.py
ignn/: __init__.py
ignn/configs/: Conf.py  __init__.py  data.yaml  params.py
ignn/models/: FlatGNN.py  IGNN.py  __init__.py
ignn/modules/: FlatGNN.py  GCNConv.py  GCNIncep.py  IGNN.py  IGNNConv.py  LSTM.py  MLP.py  __init__.py
ignn/utils/: __init__.py  argparser.py  common.py  gen_split.py  logging.py
results/: table_our.csv  table_pub.csv
scripts/: 00-GCN.sh  00-best-racIGNN-public.sh  00-cIGNN.sh  00-lcIGNN.sh  00-search-ours-split.sh  00-search-public-split.sh  00-search_ours_split.sh  00-search_public_split.sh  00sota-seq.sh  00sota.sh  01-best-cIGNN.sh  01-cIGNN.sh  01-cignn_search.py  01-rIGNN.sh  01SIGN-1hop.sh  01SIGN-st-1h.sh  01SIGN.sh  01cignn_search.py  02-aIGNN.sh  02-best-rIGNN.sh  02-rIGNN.sh  02concat.sh  02rignn_search.py  03-aIGNN.sh  03-aignn_search.py  03-best-aIGNN.sh  03aignn_search.py  03max.sh  04mean.sh  05sum.sh  06order.sh  07lstm.sh  SIGN.sh  aIGNN.sh  actor.sh  aignn_search.py  ama.sh  ar.py  blog.sh  cIGNN.sh  (+36 more)
semi_heter/: __init__.py
semi_heter/baselines/: ACMGCN.py  APPNP.py  DAGNN.py  DIFFormer.py  GAT.py  GBKGNN.py  GCN.py  GCNII.py  GGCN.py  GPRGNN.py  GloGNN.py  GraphSAGE.py  H2GCN.py  HOGGCN.py  JKNet.py  (+9 more)
utils/: __init__.py  argparser.py  gen_split.py
(+90 files in other folders)
