[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "IGNN"
version = "0.0.1"
authors = [{ name = "Gu Ming", email = "gumingwork@gmail.com" }]
keywords = ["Graph Neural Networks", "Varying Homophily", "Homophily", "Heterophily"]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch==2.1.2",
    "torch-scatter",
    "torch-sparse",
    "dgl==2.0",
    "the_utils>=0.8.0",
    "graph_datasets>=0.14.1",
    "torch_geometric==2.6.1",
    "numpy<2",
]

[project.urls]
"Homepage" = "https://github.com/galogm/IGNN"
"Bug Tracker" = "https://github.com/galogm/IGNN/issues"

[tool.yapfignore]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.semantic_release]
version_variables = [
    "ignn/__init__.py:__version__",
]
version_toml = ["pyproject.toml:project.version"]
changelog_file = "CHANGELOG.md"
